--- a/LaughderApp/app/src/main/res/values/strings.xml
+++ b/LaughderApp/app/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="profile_text">Trying to make you laugh with 300 characters or less!</string>
     <string name="like_button">Like</string>
     <string name="decline_button">Decline</string>
+    <string name="edit_profile_text">You have 500 characters to make someone laugh, so get to it!</string>
+    <string name="edit_profile_youtube_url">YouTube URL</string>
+    <string name="chat_button">Chat</string>
+    <string name="delete_button">Delete</string>
 
 </resources>
