--- a/LaughderApp/app/src/main/res/values/strings.xml
+++ b/LaughderApp/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
     <string name="edit_profile_youtube_url">YouTube URL</string>
     <string name="chat_button">Chat</string>
     <string name="delete_button">Delete</string>
+    <string name="register_button_text">Register</string>
+    <string name="welcome_text_view">Hello and welcome to Laughder! Please enter a Username</string>
+    <string name="password_text_view">and a password</string>
+    <string name="password_text_view_2">Confirm password</string>
 
 </resources>
