--- a/LaughderApp/app/src/main/res/values/strings.xml
+++ b/LaughderApp/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="password_text_view">and a password</string>
     <string name="password_text_view_2">Confirm password</string>
     <string name="save_profile_button_text">Save Profile</string>
+    <string name="cont_descr">Visual representation of embedded youtube player</string>
 
 </resources>
